minor update to html and css and added clear button in js and local storage

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -77,4 +77,11 @@ body {
   i {
     z-index: 100;
   }
+
+  #clearBtnContainer {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin: 1rem auto;
+  }
   
